[package]
name = "entelur"
version = "0.1.0"
edition = "2021"
authors = ["Sidhin S Thomas"]
description = "Telegram bot for spliting expenses"
license-file = "../LICENSE"
repository = "https://github.com/ParadoxZero/entelur"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.19"
